syntax = "proto3";

option csharp_namespace = "TradeMex";

import "Protos/trade.proto";

package trademex;

service OrderBook {
  rpc GetOrderBookSnapshot (GetOrderBookSnapshotRequest) returns (stream Order);
}

message GetOrderBookSnapshotRequest {
}
